prompt 수정, 출력결과 수정

--- a/Chatfile.html
+++ b/Chatfile.html
@@ -14,19 +14,19 @@
         <div class="subtext">Connect to KoChat.</div>
     </div>
     <div class="contact-info">
-        <div class="avatar">
-            <img src="GPT.png" alt="Avatar">
-        </div>
+        <!-- <div class="avatar">
+            <img src="assets/GPT.png" alt="Avatar">
+        </div> -->
         <div class="user-info">
             KoChat
         </div>
     </div>
     <div class="chat-box">
         <div class="line">
-            <div class="message secondary">Lorem ipsum dolor sit amet. <div class="timestamp">02:11</div></div>
+            <div class="message secondary">Lorem ipsum dolor sitㅁㄴㅇㅁㄴㅇ amet. <div class="timestamp">02:11</div></div>
         </div>
         <div class="line">
-            <div class="message primary">Lorem ipsum dolor sit amet. <div class="timestamp">02:11</div></div>
+            <div class="message primary">Lorem ipsum dolor sitㅁㄴㅇㅁㄴㅇ amet. <div class="timestamp">02:11</div></div>
         </div>
     </div>
     <div class="input-area">
